# HtmlParser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
benchmarks/: CMakeLists.txt  DOMBenchmark.cpp  DeeplyNestedHtmlBenchmark.cpp  ParseBenchmark.cpp  ParserInitializationBenchmark.cpp  SimpleParseBenchmark.cpp
examples/: CMakeLists.txt  ExtractTextContent.cpp  GetElementById.cpp  GetElementsByClassName.cpp  HandleMalformedHtml.cpp  ModifyAttributes.cpp  ParseAndSerialize.cpp  ParseExample.cpp  ParseHtmlFragment.cpp  QueryExample.cpp  QuerySelectors.cpp  RemoveElement.cpp  RootsExample.cpp  TraverseDOM.cpp
include/HtmlParser/: DOM.hpp  Node.hpp  Parser.hpp  Query.hpp  Tokenizer.hpp
src/: DOM.cpp  Node.cpp  Parser.cpp  Query.cpp  Tokenizer.cpp  Utilities.hpp
tests/: CMakeLists.txt  DOMStrictTest.cpp  DOMTest.cpp  DOMToHtmlTest.cpp  ParserTest.cpp  QueryAdvancedTest.cpp  QueryTest.cpp
